更新程序说明的URL

--- a/Meetup/程序说明.md
+++ b/Meetup/程序说明.md
@@ -8,7 +8,7 @@
 
 本程序首先用API下载所有的Group，然后下载每个Group的成员。
 
-下载成员的方式是：首先解析这样的网页，获得20个用户ID，然后调用API获取用户详细信息。然后获取下一页的用户ID。
+下载成员的方式是：首先解析这样的网页`https://www.meetup.com/AppliedSingularity/members/?offset=20&sort=social&desc=1`，获得20个用户ID，然后调用API获取用户详细信息。然后获取下一页的用户ID。
 
 ### 下载事件
 
