--- a/Meetup/程序说明.md
+++ b/Meetup/程序说明.md
@@ -1,4 +1,4 @@
-# 结构
+## 结构
 
 程序分为两部分，`下载组织+成员`和`下载事件`。（有先后顺序）
 
@@ -23,3 +23,9 @@
 关于下载成员，本程序可以保存每个组织已经下载到哪一页了，因此程序中断后可以恢复原来的进度。如果需要重置下载进度，请将`member_record.txt`中的内容清空。
 
 关于下载事件，本程序可以保存每个组织是否下载完成。程序中断后重新运行，会跳过已经下载完的组织。如果需要重置下载进度，请将`event_record.txt`中的内容清空。
+
+## 环境
+
+Python 3.7 (可能3.x都能运行)
+
+MongoDB server version: 4.0.4
